--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,13 @@ match-template = "0.0.1"
 once_cell = "^1.16.0"
 paste = "^1.0.9"
 serde = {version = "1.0.148", features = ["derive"]}
-surrealdb = {path = "/Users/huangzheng/rusts/surrealdb/lib", default-features = false, features = ["kv-mem"]}
+surrealdb = {path = "/Users/huangzheng/rusts/surrealdb/lib", default-features = false}
 tokio = {version = "^1.21.2", default-features = false, features = ["macros", "rt", "sync"]}
+
+[features]
+# default = ["ws"]
+# default = ["http"]
+default = ["mem"]
+http = ["surrealdb/protocol-http"]
+mem = ["surrealdb/kv-mem"]
+ws = ["surrealdb/protocol-ws"]
