--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ default = ["mem"]
 http = ["surrealdb/protocol-http"]
 mem = ["surrealdb/kv-mem"]
 ws = ["surrealdb/protocol-ws"]
+rocksdb = ["surrealdb/kv-rocksdb"]
